fix formatToday, add z-index on modals and fix some styles, add readme and env

--- a/src/components/Alert/alert.scss
+++ b/src/components/Alert/alert.scss
@@ -31,6 +31,7 @@
     cursor: pointer;
     font-weight: 500;
     transition: all 0.3s;
+    z-index: 1;
 
     &:hover,
     &:focus {
